src/test/deca/context/invalid/provided/DefinedVar.deca
// DESCRIPTION: Définition d'une variable deux fois
//RESULTAT: Variable is already defined ! (3.17)
{
 int a;
 int a;
}
